# doleus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  demo_tiny_coco.py  pyproject.toml
.github/workflows/: update-log.yml
demos/: object_detection_demo.ipynb
doleus/: annotations.py  check.py  datapoint.py  metric.py  prediction_store.py
doleus/analysis/: __init__.py  image_metadata.py
doleus/annotations/: __init__.py  base.py  classification.py  detection.py
doleus/checks/: __init__.py  base.py  visualization.py
doleus/dataset/: dataset.py  metadata.py
doleus/datasets/: __init__.py  base.py  classification.py  detection.py  slice.py
doleus/metrics/: __init__.py  base.py  calculator.py  classification.py  detection.py  metric_utils.py
doleus/storage/: __init__.py  base_store.py  classification_ground_truth_store.py  classification_prediction_store.py  datapoint.py  detection_ground_truth_store.py  detection_prediction_store.py  ground_truth_store.py  metadata_store.py  prediction_store.py
doleus/storage/ground_truth_store/: __init__.py  base.py  classification.py  detection.py
doleus/utils/: __init__.py  data.py  helpers.py  utils.py
examples/demos/: demo_classification.py  demo_detection.py
examples/notebooks/: demo_classification.ipynb  demo_detection.ipynb
moonwatcher/: annotations.py  breast_cancer_detection_demo.py  breast_cancer_predictions.json  check.py  datapoint.py  demo_classification_dummy.py  demo_classification_new.py  demo_detection_new.py  demo_tiny_imagenet.py  exam_list_before_cropping.pkl  metric.py  pg.ipynb  prediction_store.py  predictions.json  predictions_detection.json
moonwatcher/base/: base.py
moonwatcher/dataset/: dataset.py
moonwatcher/model/: model.py
moonwatcher/utils/: data.py  data_storage.py
tests/: conftest.py  test_annotations.py  test_base.py  test_bbox_utils.py  test_data.py  test_dataset.py  test_helpers.py  test_metadata.py  test_metric_classification.py  test_metric_detection.py  test_moonwatcher.py
tests/checks/: test_checks.py
tests/datasets/: test_datasets.py
tests/integration/: test_integration.py
tests/metrics/: test_classification_metrics.py  test_detection_metrics.py
tests/utils/: __init__.py  test_image_metadata.py
(+10 files in other folders)
