[project]
name = "doleus"
version = "0.2.0"
description = ""
authors = [
    {name = "Hendrik Schulze Bröring"},
    {name = "Niklas Schmolenski"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torchmetrics (>=1.7.3,<2.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pandas = "^2.3.0"
pycocotools = "^2.0.10"

